Fixing alignment issues + Sending JPG instead of PNG for processing (#31)
* Fixing alignment issues

* Updating to send JPG for processing instead of PNG

--- a/src/H21.Wellness.UI/src/styles.scss
+++ b/src/H21.Wellness.UI/src/styles.scss
@@ -159,4 +159,6 @@ body {
 
 h1 {
     font-size: 1.5rem;
+    margin: 0;
+    margin-top: 0.25rem;
 }
